<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            app:srcCompat="@drawable/brainnet_logo"
            android:contentDescription="TODO" />

        <EditText
            android:id="@+id/select_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_user_name"
            android:text=""
            android:autofillHints="" />

        <Button
            android:id="@+id/button_brainwave_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brainwave_password" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/whatanedf"/>

        <Button
            android:id="@+id/button_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>